--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -12,13 +12,13 @@ services:
     environment:
       - NODE_ENV=production
       - DB_HOSTNAME=immich_postgres
-      - DB_USERNAME="postgres"
-      - DB_PASSWORD="postgres"
-      - DB_DATABASE_NAME="immich"
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
       - REDIS_HOSTNAME=immich_redis
-      - LOG_LEVEL="simple"
-      - DISABLE_REVERSE_GEOCODING="false"
-      - REVERSE_GEOCODING_PRECISION="3"
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
       - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
     depends_on:
       - redis
@@ -37,13 +37,13 @@ services:
     environment:
       - NODE_ENV=production
       - DB_HOSTNAME=immich_postgres
-      - DB_USERNAME="postgres"
-      - DB_PASSWORD="postgres"
-      - DB_DATABASE_NAME="immich"
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
       - REDIS_HOSTNAME=immich_redis
-      - LOG_LEVEL="simple"
-      - DISABLE_REVERSE_GEOCODING="false"
-      - REVERSE_GEOCODING_PRECISION="3"
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
       - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
     depends_on:
       - redis
@@ -62,13 +62,13 @@ services:
     environment:
       - NODE_ENV=production
       - DB_HOSTNAME=immich_postgres
-      - DB_USERNAME="postgres"
-      - DB_PASSWORD="postgres"
-      - DB_DATABASE_NAME="immich"
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
       - REDIS_HOSTNAME=immich_redis
-      - LOG_LEVEL="simple"
-      - DISABLE_REVERSE_GEOCODING="false"
-      - REVERSE_GEOCODING_PRECISION="3"
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
       - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
     restart: always
 
@@ -81,13 +81,13 @@ services:
     environment:
       - NODE_ENV=production
       - DB_HOSTNAME=immich_postgres
-      - DB_USERNAME="postgres"
-      - DB_PASSWORD="postgres"
-      - DB_DATABASE_NAME="immich"
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
       - REDIS_HOSTNAME=immich_redis
-      - LOG_LEVEL="simple"
-      - DISABLE_REVERSE_GEOCODING="false"
-      - REVERSE_GEOCODING_PRECISION="3"
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
       - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
     restart: always
 
@@ -95,7 +95,7 @@ services:
     container_name: immich_typesense
     image: typesense/typesense:0.24.0
     environment:
-      - TYPESENSE_API_KEY="some-random_text"
+      - TYPESENSE_API_KEY=some-random_text
       - TYPESENSE_DATA_DIR=/data
     logging:
       driver: none
@@ -113,9 +113,9 @@ services:
 #    env_file:
 #      - exports.sh
     environment:
-      - POSTGRES_PASSWORD="postgres"
-      - POSTGRES_USER="postgres"
-      - POSTGRES_DB="iimich"
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=iimich
       - PG_DATA="/var/lib/postgresql/data"
     volumes:
       - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
