--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -95,7 +95,8 @@ services:
     container_name: immich_typesense
     image: typesense/typesense:0.24.0
     environment:
-      - TYPESENSE_API_KEY=some-random_text
+      - TYPESENSE_API_KEY="some-random-text"
+#      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
       - TYPESENSE_DATA_DIR=/data
     logging:
       driver: none
