--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -120,7 +120,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=iimich
+      - POSTGRES_DB=immich
       - PG_DATA="/var/lib/postgresql/data"
     volumes:
       - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
@@ -135,6 +135,7 @@ services:
       - IMMICH_WEB_URL="http://immich-web:3000"
       - IMMICH_MACHINE_LEARNING_URL="http://immich-machine-learning:3003"
       - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
     ports:
       - 2283:8080
     logging:
