--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -134,8 +134,8 @@ services:
       - IMMICH_SERVER_URL="http://immich-server:3001"
       - IMMICH_WEB_URL="http://immich-web:3000"
       - IMMICH_MACHINE_LEARNING_URL="http://immich-machine-learning:3003"
-      - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
-      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
+#      - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
+#      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
     ports:
       - 2283:8080
     logging:
