--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -140,7 +140,7 @@ services:
       - IMMICH_SERVER_URL="http://immich_server:3001"
       - IMMICH_WEB_URL="http://immich_web:3000"
       - IMMICH_MACHINE_LEARNING_URL="http://immich_machine_learning:3003"
-      - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
+#      - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
 #      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
     ports:
       - 2283:8080
