--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: immich_proxy_1
-      APP_PORT: 8080
-      PROXY_AUTH_WHITELIST: "/api/*"
+#  app_proxy:
+#    environment:
+#      APP_HOST: immich_proxy_1
+#      APP_PORT: 8080
+#      PROXY_AUTH_WHITELIST: "/api/*"
 
   immich-server:
     container_name: immich_server
