--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: octoprint/octoprint:1.8.7
+    image: octoprint/octoprint:1.8.7@sha256:4cccc197fda1346798a66ecbab45383c8daaa193630b6c3ad40947940cbdbfce
     volumes:
       - ${APP_DATA_DIR}/data:/data
       - ${UMBREL_ROOT}/octoprint:/octoprint
