--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -9,9 +9,8 @@ services:
 
   web:
     image: octoprint/octoprint:1.8.7@sha256:4cccc197fda1346798a66ecbab45383c8daaa193630b6c3ad40947940cbdbfce
-    volumes:
-      - ${APP_DATA_DIR}/data:/data
-      - ${UMBREL_ROOT}/octoprint:/octoprint
+   volumes:
+     - ${APP_DATA_DIR}/data:/octoprint
     devices:
       - "/dev/ttyACM0:/dev/ttyACM0"
     restart: on-failure
