--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -14,7 +14,7 @@ releaseNotes: >-
 developer: OctoPrint
 website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
-support: https://github.com/OctoPrint/OctoPrint/issues
+support: https://community.octoprint.org/
 port: 5000
 submitter: OctoPrint
 submission: https://github.com/getumbrel/umbrel-apps/pull/449
