set myself as submitter
Co-authored-by: Nathan Fretz <nmfretz@gmail.com>

--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -16,7 +16,7 @@ website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
 support: https://community.octoprint.org/
 port: 5000
-submitter: OctoPrint
+submitter: mateosilguero
 submission: https://github.com/getumbrel/umbrel-apps/pull/449
 gallery:
   - 1.jpg
