--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -1,21 +1,18 @@
 manifestVersion: 1
 id: octoprint
-category: Networking
+category: Productivity
 name: OctoPrint
 version: "1.8.7"
 tagline: The snappy web interface for your 3D printer.
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
 releaseNotes: >-
-  Improvements
-   Add support for Python 3.11 by bumping up the version of a dependency.
-  Bug fixes
-    Do not send None to Locale.parse if no match can be made between the request's accepted languages and the installed languages. Fixes a 500 server error on the API in case of Babel being at of version of 2.12 or higher.
+  - Initial release for the Umbrel App Store
 developer: OctoPrint
 website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
 support: https://community.octoprint.org/
-port: 5000
+port: 5003
 submitter: mateosilguero
 submission: https://github.com/getumbrel/umbrel-apps/pull/449
 gallery:
