--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
   
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
 developer: qBittorrent
-website: https://qBittorrentbt.com/
+website: https://qbittorrent.org/
 dependencies: []
 repo: https://github.com/qBittorrent/qBittorrent
 support: https://github.com/qBittorrent/qBittorrent/issues
@@ -22,9 +22,9 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-path: "/qbittorrent/web/"
-defaultUsername: ""
-defaultPassword: ""
+path: ""
+defaultUsername: "admin"
+defaultPassword: "adminadmin"
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
