--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -1,121 +1,156 @@
-version: "3.7"
+version: "3.8"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: immich_proxy_1
-      APP_PORT: 8080
-      PROXY_AUTH_WHITELIST: "/api/*"
+#  app_proxy:
+#    environment:
+#      APP_HOST: immich_proxy_1
+#      APP_PORT: 8080
+#      PROXY_AUTH_WHITELIST: "/api/*"
 
-  server:
-    image: altran1502/immich-server:v1.40.0_63-dev@sha256:c61f6c5373efb4544db8d04e6e090b77561b71b07d4f272821a6349a18531e37
-    entrypoint: ["/bin/sh", "./start-server.sh"]
+  immich-server:
+    container_name: immich_server
+    image: ghcr.io/immich-app/immich-server:release
+    entrypoint: [ "/bin/sh", "./start-server.sh" ]
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
+#    env_file:
+#      - exports.sh
     environment:
-      NODE_ENV: production
-      DB_HOSTNAME: immich_postgres_1
-      DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
-      DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
-      DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich_redis_1
-      LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
-      JWT_SECRET: ${APP_SEED}
-      DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
-      REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
-      PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
+      - NODE_ENV=production
+      - DB_HOSTNAME=immich_postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
+      - REDIS_HOSTNAME=immich_redis
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
+      - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
     depends_on:
       - redis
-      - postgres
-    restart: on-failure
+      - database
+      - typesense
+    restart: always
 
-  microservices:
-    image: altran1502/immich-server:v1.40.0_63-dev@sha256:c61f6c5373efb4544db8d04e6e090b77561b71b07d4f272821a6349a18531e37
-    # This service cannot run under 1000:1000
-    # And because the uploads are shared
-    # We'll run immich specific services as root
-    entrypoint: ["/bin/sh", "./start-microservices.sh"]
+  immich-microservices:
+    container_name: immich_microservices
+    image: ghcr.io/immich-app/immich-server:release
+    entrypoint: [ "/bin/sh", "./start-microservices.sh" ]
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
+#    env_file:
+#      - exports.sh
     environment:
-      NODE_ENV: production
-      DB_HOSTNAME: immich_postgres_1
-      DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
-      DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
-      DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich_redis_1
-      LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
-      JWT_SECRET: ${APP_SEED}
-      DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
-      REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
-      PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
+      - NODE_ENV=production
+      - DB_HOSTNAME=immich_postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
+      - REDIS_HOSTNAME=immich_redis
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
+      - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
     depends_on:
       - redis
-      - postgres
-    restart: on-failure
+      - database
+      - typesense
+    restart: always
 
-  machine-learning:
-    image: altran1502/immich-machine-learning:v1.40.0_63-dev@sha256:a5e660247a5a3c1d1b4ab9d160629def546d7e86e534a55d5ebc0e0eee5cef1a
-    entrypoint: ["/bin/sh", "./entrypoint.sh"]
+  immich-machine-learning:
+    container_name: immich_machine_learning
+    image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
+      - ${APP_DATA_DIR}/model-cache:/cache
+#    env_file:
+#      - exports.sh
     environment:
-      NODE_ENV: production
-      DB_HOSTNAME: immich_postgres_1
-      DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
-      DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
-      DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich_redis_1
-      LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
-      JWT_SECRET: ${APP_SEED}
-      DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
-      REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
-      PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
-    depends_on:
-      - postgres
-    restart: on-failure
+      - NODE_ENV=production
+      - DB_HOSTNAME=immich_postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
+      - REDIS_HOSTNAME=immich_redis
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
+      - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
+    restart: always
 
-  web:
-    image: altran1502/immich-web:v1.40.0_63-dev@sha256:abad6488afaa1d0b4b8ea818221b86e7b45bf72a1ea328d8c0f35ad266b9e544
-    entrypoint: ["/bin/sh", "./entrypoint.sh"]
+  immich-web:
+    container_name: immich_web
+    image: ghcr.io/immich-app/immich-web:release
+    entrypoint: [ "/bin/sh", "./entrypoint.sh" ]
+#    env_file:
+#      - exports.sh
     environment:
-      DB_HOSTNAME: immich_postgres_1
-      DB_USERNAME: ${APP_IMMICH_DB_USERNAME}
-      DB_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
-      DB_DATABASE_NAME: ${APP_IMMICH_DB_DATABASE_NAME}
-      REDIS_HOSTNAME: immich_redis_1
-      LOG_LEVEL: ${APP_IMMICH_LOG_LEVEL}
-      JWT_SECRET: ${APP_SEED}
-      DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
-      REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
-      PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
-      PUBLIC_IMMICH_SERVER_URL: "http://immich_server_1:3001"
-    restart: on-failure
+      - NODE_ENV=production
+      - DB_HOSTNAME=immich_postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - DB_DATABASE_NAME=immich
+      - REDIS_HOSTNAME=immich_redis
+      - LOG_LEVEL=simple
+      - DISABLE_REVERSE_GEOCODING=false
+      - REVERSE_GEOCODING_PRECISION=3
+      - PUBLIC_LOGIN_PAGE_MESSAGE="Welcome to Immich Photo Backup"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
+    restart: always
 
-  proxy:
-    image: altran1502/immich-proxy:v1.40.0_63-dev@sha256:f779b86497b3d4b8822ec0d7341cfd2d1f1688b8859c70a9b16bd36d01468865
+  typesense:
+    container_name: immich_typesense
+    image: typesense/typesense:0.24.0
     environment:
-      IMMICH_WEB_URL: "http://immich_web_1:3000"
-      IMMICH_SERVER_URL: "http://immich_server_1:3001"
-    depends_on:
-      - server
-    restart: on-failure
+#      - TYPESENSE_API_KEY="some-random-text"
+      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
+      - TYPESENSE_DATA_DIR=/data
+    logging:
+      driver: none
+    volumes:
+      - ${APP_DATA_DIR}/tsdata:/data
 
   redis:
-    image: redis:6.2-bullseye@sha256:ffd3d04c8f7832ccdda89616ebaf3cb38414b645ebbf76dbef1fc9c36a72a2d1
-    user: "1000:1000"
-    restart: on-failure
-    volumes:
-      - ${APP_DATA_DIR}/data/redis:/data
+    container_name: immich_redis
+    image: redis:6.2
+    restart: always
 
-  postgres:
-    image: postgres:14-bullseye@sha256:135c62a8134dcef829a1e4f5568bfae44bcfa2c75659ff948f43c71964366aa4
-    user: "1000:1000"
+  database:
+    container_name: immich_postgres
+    image: postgres:14
+#    env_file:
+#      - exports.sh
     environment:
-      POSTGRES_USER: ${APP_IMMICH_DB_USERNAME}
-      POSTGRES_PASSWORD: ${APP_IMMICH_DB_PASSWORD}
-      POSTGRES_DB: ${APP_IMMICH_DB_DATABASE_NAME}
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: immich
       PG_DATA: /var/lib/postgresql/data
     volumes:
-      - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
-    restart: on-failure
+      - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
+    restart: always
+
+  immich-proxy:
+    container_name: immich_proxy
+    image: ghcr.io/immich-app/immich-proxy:release
+    environment:
+      # Make sure these values get passed through from the env file
+      IMMICH_SERVER_URL: "http://immich_server:3001"
+      IMMICH_WEB_URL: "http://immich_web:3000"
+      IMMICH_MACHINE_LEARNING_URL: "http://immich_machine_learning:3003"
+#      - IMMICH_API_URL_EXTERNAL="http://localhost:3001"
+#      - TYPESENSE_API_KEY=qwertyasdfgzxcvb
+    ports:
+      - 2283:8080
+#    logging:
+#      driver: none
+    depends_on:
+      - immich-server
+    restart: always
+
+#volumes:
+#  pgdata:
+#  model-cache:
+#  tsdata:
