Update Torq to v0.19.2

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.19.1"
+version: "v0.19.2"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -49,21 +49,7 @@ gallery:
   - 4.jpg
   - 5.jpg
 releaseNotes: >-
-  This version is a large update to Torq
-
-
-  New Main Features:
-
-  * Dashboard page showing on and off chain balances as well as other summary information
-
-  * More advanced automation including multi-staged workflows and actions for setting channel policy and running a rebalance between channels
-
-  * Most pages auto refresh their data but also include a manual refresh button
-
-  * Added the ability to export channel and forwarding data to CSV
-
-
-  Also includes many small features, bug fixes and performance enhancements
+  Mobile layout fix and bug fix to reconnect to LND after any connection issues.
 
 path: ""
 defaultUsername: ""
