--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: mempool
 category: Explorers
 name: mempool
-version: "2.4.0-build-2"
+version: "2.5.0"
 tagline: A self-hosted explorer for the Bitcoin community
 description: >-
   Trusted third parties are security holes. Self-host your own
@@ -32,7 +32,45 @@ description: >-
 
   - JSON APIs
 releaseNotes: >-
-  This update allows the Lightning Node app to open its Bitcoin wallet (on-chain) transactions on your local mempool.
+Updates mempool from version 2.4.0 to 2.5.0
+
+A full list of new features, improvements, and bug fixes for version can be found here: https://github.com/mempool/mempool/releases/tag/v2.5.0
+
+* If you are using a custom pools.json URL in the `POOLS_JSON_URL` setting, you need to update to `pools-v2.json`
+
+* After upgrading the `blocks` database table will be cleared and reindexed, which can take several hours
+
+Highlights
+
+- Lightning Network Explorer
+  * LND and CLN support
+  * GeoIP integration
+  * Channel forensic
+
+- Visualized mined blocks
+
+- Optional getBlockTemplate algoritm for accurate mempool prediction
+
+- Block audit with health score
+
+- Historical fiat prices and currency selector
+
+- Difficulty adjustment widget
+
+- Historical CPFP data
+
+- Smarter search bar in dark mode
+
+- The blockchain now scrolls and jumps to any block
+
+- The blockchain- and mempool blocks orientation can be flipped
+
+New languages supported
+- Lithuanian by @eimze21
+
+- Danish by @pierrevendelboe
+
+- Nepalese by @kebinm
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
