Update the mempool app to v2.5.0

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: mempool
 category: Explorers
 name: mempool
-version: "2.4.0-build-2"
+version: "2.5.0"
 tagline: A self-hosted explorer for the Bitcoin community
 description: >-
   Trusted third parties are security holes. Self-host your own
@@ -32,7 +32,7 @@ description: >-
 
   - JSON APIs
 releaseNotes: >-
-  This update allows the Lightning Node app to open its Bitcoin wallet (on-chain) transactions on your local mempool.
+  This update allows users to use the Lightning Explorer if LND is installed.
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
