Update the submitter field

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -48,5 +48,6 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Bastien Guillaumat
+submitter: Mempool Space K.K.
 submission: https://github.com/getumbrel/umbrel/pull/470
+
