--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -35,7 +35,10 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  
+  Arvo 414K
+  Vere v2.2
+
+  Support for [zuse %414] and [lull %325].
 
 
   Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.1
