Disable proxy auth

--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: qbittorrent_server_1
       APP_PORT: 8094
+      PROXY_AUTH_ADD: "false"
 
   server:
     image: linuxserver/qbittorrent:4.5.2
