empty array for deps
Co-authored-by: Nathan Fretz <nmfretz@gmail.com>

--- a/nutstash-wallet/umbrel-app.yml
+++ b/nutstash-wallet/umbrel-app.yml
@@ -17,7 +17,7 @@ releaseNotes: >-
   
 developer: Gandlafbtc
 website: https://nutstash.app/
-dependencies: 
+dependencies: []
 repo: https://github.com/gandlafbtc/nutstash-wallet
 support: https://t.me/+DRy-rSe5wQtlYTk1
 port: 4173
