--- a/nutstash-wallet/umbrel-app.yml
+++ b/nutstash-wallet/umbrel-app.yml
@@ -15,7 +15,7 @@ description: >-
 releaseNotes: >-
   - Initial release on the umbrel app store
   
-developer: Gandlafbtc
+developer: gandlafbtc
 website: https://nutstash.app/
 dependencies: []
 repo: https://github.com/gandlafbtc/nutstash-wallet
