--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,26 +2,30 @@ manifestVersion: 1
 id: snort
 category: Social
 name: Snort
-version: "v0.1.4"
+version: "v0.1.6"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
   Our focus is on providing users with an easy-to-use interface to interact with the Nostr network, making it accessible to all types of users. 
   With its clean and intuitive design, Snort makes it simple to navigate the Nostr network and access its features, allowing users to efficiently manage their data.
 releaseNotes: >-
-  ## Added
+  ## Changes
 
-  - LNC + LNDHub wallet support
+  - Completely rebuilt "core" subscription management system
 
-  - Magnet link previews
+  - Option to rewrite Twitter links to Nitter links
 
-  - NIP-06 Key generation
+  - Tarui app setup, Mac/Windows/Linux desktop apps
 
-  - NIP-58 Badges
+  - OpenGraph tagging for profiles and events (Only for https://snort.social)
 
-  - Wavlake player embeds
+  - NIP-27 nostr: link parsing
 
-  - FastZaps
+  - Global tab full relay names
+
+  - Snort NIP5 management page (for transfers to new pubkeys)
+
+  - Short links for Snort NIP5 owners (ie. https://snort.social/kieran)
 developer: Snort
 website: https://snort.social
 dependencies: []
