Update the app description and release notes

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -8,9 +8,11 @@ description: >-
   Trusted third parties are security holes. Self-host your own
   instance of mempool.space on Umbrel for maximum privacy.
 
+  This app has a Lightning explorer, but you need to install the
+  Lightning Node app on your Umbrel first. If you install it after
+  Mempool, restart your Umbrel for the Lightning explorer to work. 
 
   Features:
-
 
   - Live dashboard visualizing the mempool and blockchain
 
@@ -29,10 +31,12 @@ description: >-
   - Audio notifications on transaction confirmed and address balance change
 
   - Multiple languages support
-
+  
+  - Lightning explorer (when the Lightning Node app is installed)
+  
   - JSON APIs
 releaseNotes: >-
-  This update allows users to use the Lightning Explorer if LND is installed.
+  This update allows users to use the Lightning explorer if the Lightning Node app is installed.
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
