update chatbot-ui to 2023.04.05

--- a/chatbot-ui/umbrel-app.yml
+++ b/chatbot-ui/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: chatbot-ui
 category: Productivity
 name: ChatBot UI
-version: "2023.03.27"
+version: "2023.04.05"
 tagline: ChatGPT but better
 description: >-
   ChatBot UI is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.
@@ -27,9 +27,17 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Initial release to the Umbrel App Store.
+  This update includes various bug fixes and enhancements, including the following:
   
+  - You can now import and export custom prompts
+
+  - Prompts are now tabbable
+
+  - Support added for custom default system prompts
+
+  - Fixed bug that caused the app to crash when typing "/" followed by a non-prompt name
   
-  This version is up-to-date as of commit 5aa5be3 here: https://github.com/mckaywrigley/chatbot-ui/commit/5aa5be3f435981b053ee8cab7205b6107ff34dc5
+
+  This version is up-to-date as of commit e8150e7 here: https://github.com/mckaywrigley/chatbot-ui/commit/e8150e719548ce107f0cd45efbaae02746a9315f
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/472
