update release notes

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,20 +22,21 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  Introducing Advanced Settings. Take control of your node and customize it to your needs.
+  This update includes a wide range of enhancements to LND:
 
+  - Refined peer-to-peer behavior and BOLT spec compliance.
 
-  - Personalize your node by giving it a name and color.
+  - Extended RPC functionality and wallet capabilities.
 
-  - Enable larger channels, and limit channel sizes.
+  - Improved lncli features and pathfinding improvements.
 
-  - Set your routing fees, and optimize your routing strategy.
+  - Streamlined watchtower session handling and address updates.
 
-  - Add watchtower services to guard your channels, and run a service for others.
-
-  - Fine-tune the performance and resource usage of your node.
-
-  - And much more!
+  - And more! 
+  
+  
+  For more detailed information on these enhancements and additional updates, 
+  please refer to the full release notes available at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.0.md
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
