--- a/elements/umbrel-app.yml
+++ b/elements/umbrel-app.yml
@@ -2,12 +2,17 @@ manifestVersion: 1.1
 id: elements
 category: Wallet Servers
 name: Elements Core
-version: "0.21.0.2"
+version: "22.1.1"
 tagline: Liquid Network full node
-description: Elements is an open source full node implementation to run the Liquid
+description: >-
+  Elements is an open source full node implementation to run the Liquid
   Network, a Bitcoin layer-2 solution enabling the fast, confidential settlement and
   issuance of digital assets, such as stablecoins, security tokens, and other financial
   instruments, on top of the Bitcoin timechain.
+releaseNotes: >-
+  - release
+  - notes
+  - placeholder
 developer: Elements Core Developers
 website: https://elementsproject.org
 dependencies:
