add release notes

--- a/elements/umbrel-app.yml
+++ b/elements/umbrel-app.yml
@@ -10,9 +10,22 @@ description: >-
   issuance of digital assets, such as stablecoins, security tokens, and other financial
   instruments, on top of the Bitcoin timechain.
 releaseNotes: >-
-  - release
-  - notes
-  - placeholder
+  This release updates elements from version 0.21.0.2 to 22.1.1, and features various bug fixes and improvements such as:
+  
+  
+  - Bringing elements up to date with Bitcoin Core version 22.1
+  
+  - Optimizing wallet stability and memory usage
+
+  - Resolving issues with duplicate blocks and commitments
+
+  - Improving Partially-Signed Elements Transactions and RPC calls
+
+  - And more.
+
+
+  For more detailed information on this update, please refer to the full release notes 
+  available at https://github.com/ElementsProject/elements/releases
 developer: Elements Core Developers
 website: https://elementsproject.org
 dependencies:
