tweak release notes

--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -40,7 +40,7 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This release updates boltz-lnd to v1.2.7 and includes an important fix for LND fee estimation.
+  This release updates the boltz-lnd dependency of the Ride The Lightning app to v1.2.7, and includes an important fix for LND fee estimation.
 
 
   Full release notes for boltz-lnd can be found here: https://github.com/BoltzExchange/boltz-lnd/releases/tag/v1.2.7
