--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.19.2"
+version: "v0.20.0"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -49,7 +49,14 @@ gallery:
   - 4.jpg
   - 5.jpg
 releaseNotes: >-
-  Mobile layout fix and bug fix to reconnect to LND after any connection issues.
+  New Peers page
+  Basic Slack and Telegram integrations
+  Embedded binaries
+  Workflow logs automatic cleanup (we keep 7 days to limit database bloat)
+  Invoice deduplication
+  Workflow node deletion performance fix
+  Removed faulty dependency that caused excessive CPU usage
+  Also includes HUGE amounts of back-end optimizations!
 
 path: ""
 defaultUsername: ""
