--- a/elements/docker-compose.yml
+++ b/elements/docker-compose.yml
@@ -16,8 +16,9 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/home/elements/.elements
     command:
-      - -listen=1
+      - -listen=0
       - -txindex=1
+      - -trim_headers=1
       # Current Elements Core requires >8GB of RAM to verify confidential proofs during IBD
       # We skip historical block verification for now, as we don't have a way to set the memory limit
       - -assumevalid=d5c8278b7c1c926eea46776445aaa94906a0e2a753fa007bda1841139cfb6543
