--- a/nutstash-wallet/docker-compose.yml
+++ b/nutstash-wallet/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
       
   web:
-    image: ghcr.io/gandlafbtc/nutstash-wallet:0.1.8@sha256:83f4c041b89de570bbc3df41983668e6858d257562e50a82a521899c2975c614
+    image: ghcr.io/gandlafbtc/nutstash-wallet:0.1.10-a@sha256:70a32529ccda47a4673e28a2dd343ca532a73253332a74c0c0c61f2cbceae1cf
     restart: on-failure
     stop_grace_period: 1m
     
