update Elements description

--- a/elements/umbrel-app.yml
+++ b/elements/umbrel-app.yml
@@ -9,6 +9,9 @@ description: >-
   Network, a Bitcoin layer-2 solution enabling the fast, confidential settlement and
   issuance of digital assets, such as stablecoins, security tokens, and other financial
   instruments, on top of the Bitcoin timechain.
+
+
+  This app has the potential to use up to 6GB of RAM. It's important to confirm that your device meets the necessary hardware requirements before installing and running the app.
 releaseNotes: >-
   This release updates elements from version 0.21.0.2 to 22.1.1, and features various bug fixes and improvements such as:
   
