update version and port

--- a/nutstash-wallet/docker-compose.yml
+++ b/nutstash-wallet/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   app_proxy:
     environment:
       APP_HOST: nutstash-wallet_web_1
-      APP_PORT: 4173
+      APP_PORT: 3000
       PROXY_AUTH_ADD: "false"
       
   web:
-    image: ghcr.io/gandlafbtc/nutstash-wallet:0.1.10-a@sha256:70a32529ccda47a4673e28a2dd343ca532a73253332a74c0c0c61f2cbceae1cf
+    image: ghcr.io/gandlafbtc/nutstash-wallet:0.1.10@sha256:2d33851ef8bf7008a4f0daef7905d055580976213987e7a09c67145250c84220
     restart: on-failure
     stop_grace_period: 1m
     
