--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: homebox_server_1
+      APP_HOST: homebox_web_1
       APP_PORT: 7745
     
   server:
