--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_HOST: homebox_web_1
       APP_PORT: 7745
     
-  server:
+  web:
     image: ghcr.io/hay-kot/homebox:v0.9.1@sha256:93eb59c89dc59cf2a6bd3943828ecc30f5a8c8f34fd844c79f54801e914ea64e
     restart: on-failure
     environment:
