--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   web:
     image: ghcr.io/hay-kot/homebox:v0.9.1@sha256:93eb59c89dc59cf2a6bd3943828ecc30f5a8c8f34fd844c79f54801e914ea64e
     restart: on-failure
-    user: 1000:1000
+    # user: 1000:1000
     environment:
       - HBOX_LOG_LEVEL=info
       - HBOX_LOG_FORMAT=text
