Add note about the MaxMind GeoLite2 data

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -33,10 +33,14 @@ description: >-
   - Audio notifications on transaction confirmed and address balance change
 
   - Multiple languages support
-  
+
   - Lightning explorer (when the Lightning Node app is installed)
-  
+
   - JSON APIs
+
+
+  This product includes GeoLite2 data created by MaxMind, available from https://www.maxmind.com
+
 releaseNotes: >-
   This update allows users to use the Lightning explorer if the Lightning Node app is installed.
 developer: Mempool Space K.K.
@@ -56,4 +60,3 @@ defaultUsername: ""
 defaultPassword: ""
 submitter: Mempool Space K.K.
 submission: https://github.com/getumbrel/umbrel/pull/470
-
