--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,30 +2,58 @@ manifestVersion: 1
 id: snort
 category: Social
 name: Snort
-version: "v0.1.6"
+version: "v0.1.7"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
   Our focus is on providing users with an easy-to-use interface to interact with the Nostr network, making it accessible to all types of users. 
   With its clean and intuitive design, Snort makes it simple to navigate the Nostr network and access its features, allowing users to efficiently manage their data.
 releaseNotes: >-
-  ## Changes
+  ## Added
 
-  - Completely rebuilt "core" subscription management system
+  * Per event zap targets by @v0l
 
-  - Option to rewrite Twitter links to Nitter links
+  * Content warning (NIP-36) support by @v0l
 
-  - Tarui app setup, Mac/Windows/Linux desktop apps
+  * Polls (NIP-69) by @v0l
 
-  - OpenGraph tagging for profiles and events (Only for https://snort.social)
+  * Snort subscriptions by @v0l
 
-  - NIP-27 nostr: link parsing
+  * NIP-94 File header support by @v0l
 
-  - Global tab full relay names
+  * Link previews by @ghobs91 & @v0l
 
-  - Snort NIP5 management page (for transfers to new pubkeys)
+  * Cmd+Enter to post note by @v0l
 
-  - Short links for Snort NIP5 owners (ie. https://snort.social/kieran)
+  * `nostr:` links (NIP-27) by @v0l
+
+  * Tending users on Search page by @ghobs91 & @v0l 
+
+
+  ## Changed
+
+  * Paste image upload by @vivganes
+
+  * Note creator note preview by @v0l 
+
+  * Login private key input masking by @vivganes
+
+
+  ## Fixed
+
+  * Fix note creator closing on thread when new replies load by @SamSamskies
+
+  * Follow hashtag tab highlighting by @SamSamskies
+
+  * Language dropdown defaults to Arabic by @vivganes
+
+  * Bookmarks showing reactions by @vivganes
+
+  * Single zapper on note only shows name by @vivganes
+
+  * Broken link previews show empty box by @vivganes
+  
+  * Render jfif images by @v0l 
 developer: Snort
 website: https://snort.social
 dependencies: []
