introduce production Rails env

--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -18,4 +18,4 @@ services:
       CONFIG_PATH: "/lnd/lnd.conf"
       CERTIFICATE_PATH: "/lnd/tls.cert"
       API_URL: "https://lightningnetwork.plus/api/2/"
-      RAILS_ENV: "development"
+      RAILS_ENV: "production"
