--- a/lnplus/docker-compose.yml
+++ b/lnplus/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: lnplus_web_1
       APP_PORT: "3777"
   web:
-    image: lightningnetworkplus/lnpclient:v0.1.26@sha256:d95f4f6584840a0e350a0d364e793cdaa85a787e319a760d8bb0bbb021cfa5
+    image: lightningnetworkplus/lnpclient:v0.1.27@sha256:c899b16c462db6aad30b292abfdaa442ef2c7b20ae4228806b187706976216
     restart: on-failure
     stop_grace_period: 1m
     volumes:
@@ -18,4 +18,4 @@ services:
       CONFIG_PATH: "/lnd/lnd.conf"
       CERTIFICATE_PATH: "/lnd/tls.cert"
       API_URL: "https://lightningnetwork.plus/api/2/"
-      RAILS_ENV: "production"
+      RAILS_ENV: "development"
