--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v2.3"
+version: "v2.2"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -37,5 +37,11 @@ submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
   
 
-
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.3
+  -   Includes click, a thin client for interacting with khan/conn
+      (control plane). See this excellent writeup by the feature’s author,
+      ~finmep-lanteb, for more details on the rationale.
+  -   Adds a CLI option to configure the time between snapshots.
+  -   Changes the placement of auto-docking in the boot sequence.
+  
+  
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.2
