--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -35,9 +35,7 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  -   Includes click, a thin client for interacting with khan/conn
-      (control plane). See this excellent writeup by the feature’s author,
-      ~finmep-lanteb, for more details on the rationale.
+  -   Includes click, a thin client for interacting with khan/conn (control plane). See this excellent writeup by the feature’s author, ~finmep-lanteb, for more details on the rationale.
       
   -   Adds a CLI option to configure the time between snapshots.
   
