lightning-terminal: update to v0.9.2-alpha

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.9.0-alpha"
+version: "0.9.2-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -50,17 +50,13 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) includes updates to the versions
-  of the integrated LND, Pool, Loop and Faraday daemons. A few updates to LiT
-  itself have also been included: LiT can now be started with the `--disableui`
-  option meaning that the local UI will not be accessible and the `uipassword`
-  would no longer need to be set. REST annotations are also added for all LiT 
-  services.
+  This release of Lightning Terminal (LiT) includes an LND version bump 
+  that addresses a few performance issues.
   
   We'll be continuously working to improve the user experience based on 
   feedback from the community.
   
-  This release packages LND v0.16.0-beta, Loop v0.22.0-beta, Pool v0.6.2-beta, 
-  and Faraday v0.2.10-alpha.
+  This release packages LND v0.16.2-beta, Loop v0.23.0-beta, Pool v0.6.2-beta, 
+  and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
