--- a/transmission/docker-compose.yml
+++ b/transmission/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 9091
 
   server:
-    image: linuxserver/transmission:version-3.00-r5@sha256:f0b885f211dd6fde7b64f0d6b9e5931929cfc2331fb83d6f3171e412f22b3f87
+    image: linuxserver/transmission:4.0.3@sha256:fdd97348ad51844411a6d97e9393df8c29d13581b67d2be1fb3f0919debe2bbd
     environment:
       - PUID=1000
       - PGID=1000
